Fixed minor bugs (resolved Issue #19)